# EcoTorch

./: .flake8  .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml  testing.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
docs/: api-reference.md  code-of-conduct.md  contributing.md  faq.md  getting-started.md  index.md  methodology.md
docs/examples/: advanced_usage.py  basic_training.py  evaluation.py
scr/ecotorch/: __init__.py  datahandler.py  geolocator.py  main.py
src/ecotorch/: __init__.py  core.py  datahandler.py  geolocator.py
src/ecotorch/watcher/: __init__.py  interface.py  linux.py  windows.py
src/ecotorch/watcher/cpp/: bindings.cpp  monitor.cpp  monitor_test.cpp
testing/: testing.py
tests/: conftest.py  test_core.py  test_datahandler.py  test_geolocator.py  test_main.py
