[build-system]
requires = ["scikit-build-core>=0.10.0", "nanobind>=2.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "ecotorch"
version = "0.1.0"
description = "A lightweight package to measure the ecological and financial effect of training and evaluation of pytorch projects."
requires-python = ">=3.13"
authors = [
    { name = "Leo Nagy" }
]
dependencies = [
    "datasets>=4.5.0",
    "geoip2fast>=1.2.2",
    "nanobind>=2.11.0",
    "pandas>=3.0.0",
    "pandas-stubs~=3.0.0",
    "pycountry>=26.2.16",
    "pynvml>=13.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "zeus>=0.13.1",
    "zeus-apple-silicon>=1.0.4",
]

[tool.scikit-build]
wheel.packages = ["src/ecotorch"]
wheel.exclude = ["src/ecotorch/watcher/cpp"]
cmake.build-type = "Release"
