[build-system]
requires = ["scikit-build-core>=0.10.0", "nanobind>=2.11.0", "cmake>=3.24"]
build-backend = "scikit_build_core.build"

[project]
name = "ecotorch"
version = "0.2.4"
description = "A lightweight package to measure the ecological and financial effect of training and evaluation of pytorch projects."
readme="README.md"
requires-python = ">=3.11"
authors = [
    { name = "Leo Nagy" }
]
dependencies = [
    "datasets>=4.5.0",
    "geoip2fast>=1.2.2",
    "nanobind>=2.11.0",
    "nvidia-ml-py>=13.590.48",
    "pandas>=3.0.0",
    "pandas-stubs~=3.0.0",
    "pycountry>=26.2.16",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.scikit-build]
wheel.packages = ["src/ecotorch"]
wheel.exclude = ["src/ecotorch/watcher/cpp"]
cmake.build-type = "Release"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88